# Le-Projet-Cirque

./: .gitignore  CMakeLists.txt  README.md
assets/Shaders/: light.frag  simple.frag
assets/models/: black-pawn.mtl  pawn.mtl
src/: main.cpp
src/Core/: GameState.cpp  GameState.hpp
src/Gameplay/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp
src/Gameplay/Pieces/: CrazyBishop.cpp  CrazyBishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Tower.cpp  Tower.hpp
src/ImGuiLayer/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/Models/: Board.cpp  Board.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp
src/Models/Pieces/: Pawn.cpp  Pawn.hpp
src/Renderer/: Camera.cpp  Camera.hpp  ChessBoard.cpp  ChessBoard.hpp  Model.cpp  Model.hpp  ShaderUtils.cpp  ShaderUtils.hpp  Skybox.cpp  Skybox.hpp
src/UI/: GameUI.cpp  GameUI.hpp  MainMenu.cpp  MainMenu.hpp
src/UI/Props/: CaseUI.cpp  CaseUI.hpp
